fix: card adjustment and alignment issues

--- a/style.css
+++ b/style.css
@@ -175,11 +175,10 @@ li a {
 .projects {
   width: 100%;
   height: 100vh;
-  grid-template-columns: repeat(2, 380px);
+  grid-template-columns: repeat(2, 45%);
   grid-template-rows: repeat(3, 200px);
   gap: 32px;
   display: grid;
-  justify-content: space-between;
 }
 
 .card {
@@ -187,31 +186,9 @@ li a {
   box-shadow: inset 12px 0 4px -4px #3c7db396, #3c40434d 0px 1px 2px 0px,
     #3c404326 0px 1px 3px 1px;
   height: 160px;
-  width: 370px;
+  width: 90%;
   padding: 25px;
   border-radius: 8px;
-}
-
-.red,
-.green,
-.blue {
-  height: 100%;
-  width: 48px;
-}
-
-.red {
-  background-color: #e42525;
-  margin-right: -80px;
-  margin-left: 90px;
-}
-
-.green {
-  background-color: #359b35;
-  margin-right: -80px;
-}
-
-.blue {
-  background-color: #203c6e;
 }
 
 .announcements-container {
